--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -1,3 +1,65 @@
-// Place all the styles related to the questions controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import "config";
+
+.main{
+  height: 100vh;
+  width: 100%;
+  padding-top: $h-header;
+  background-color: #FAFAFA;
+
+  &__title{
+    padding-top: $ele-pad;
+    width: 100%;
+    h1{
+      text-align: center;
+      letter-spacing: 3px;
+      font-size: 32px;
+      font-weight: 200;
+      color: #4a4a4a;
+    }
+  }
+
+  &__form{
+    width: 500px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 4px;
+    margin: $ele-pad auto;
+    padding: $ele-pad;
+    h2{
+      font-size: 18px;
+      color: #333333;
+      margin-bottom: 5px;
+    }
+
+    .part{
+      margin-bottom: $ele-pad;
+    }
+
+    .detail{
+      .auto-resize{
+        // default
+        height: 200px;
+      }
+    }
+
+    
+  }
+
+  &__btn{
+    width: 160px;
+    height: 40px;
+    background: #D9534F;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin: 0 auto;
+    border-radius: 50px;
+    text-align: center;
+
+    .submit{
+      width: 100%;
+      height: 100%;
+      color: white;
+      line-height: 40px;
+      font-size: 14px;
+    }
+  }
+}
