--- a/app/assets/stylesheets/_config.scss
+++ b/app/assets/stylesheets/_config.scss
@@ -1,3 +1,3 @@
-$h-header: 60px;
-$ele-pad: 30px;
-$w-content: 600px;
+$h-header: 60px; //header height
+$ele-pad: 30px; //general element pdding
+$w-content: 600px; //form and questions width
