--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -1,10 +1,13 @@
 @import "config";
 
+html{
+  background-color: #FAFAFA;
+}
+
 .main{
   height: 100vh;
   width: 100%;
   padding-top: $h-header;
-  background-color: #FAFAFA;
 
   &__title{
     padding-top: $ele-pad;
